# paimon-rust

./: .asf.yaml  .gitattributes  .gitignore  .licenserc.yaml  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.rust.tsv  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  release-go-binding.yml  release-rust.yml  release_python_binding.yml
benchmarks/tpcds/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
benchmarks/tpcds/src/: cli.rs  context.rs  lib.rs
benchmarks/tpcds/tests/: smoke.rs
bindings/c/: Cargo.toml  DEPENDENCIES.rust.tsv
bindings/c/src/: error.rs  lib.rs  result.rs  table.rs  tests.rs  types.rs  vector_search.rs  write.rs
bindings/go/: DEPENDENCIES.rust.tsv  LICENSE  Makefile  NOTICE  RELEASE.md  THIRD-PARTY-LICENSES.darwin.amd64.html  THIRD-PARTY-LICENSES.darwin.arm64.html  THIRD-PARTY-LICENSES.linux.amd64.html  THIRD-PARTY-LICENSES.linux.arm64.html
bindings/python/: Cargo.toml  DEPENDENCIES.rust.tsv  Makefile  THIRD-PARTY-LICENSES.html  pyproject.toml
bindings/python/src/: context.rs  (+1 more)
crates/: blob_test_utils.rs
crates/integration_tests/: Cargo.toml  DEPENDENCIES.rust.tsv
crates/paimon/: Cargo.toml  DEPENDENCIES.rust.tsv  blob_test_utils.rs
crates/paimon-rest-server/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
crates/paimon-rest-server/src/: lib.rs  main.rs
crates/paimon-rest-server/tests/: e2e.rs
docs/: README.md  mkdocs.yml
docs/src/: architecture.md  benchmark.md  c-binding.md  contributing.md  datafusion.md  getting-started.md  index.md  releases.md  sql.md
scripts/: bump-version.sh  constants.py  dependencies.py  python_release_version.py  release_licenses.py  validate_asf_yaml.py  verify_go_release_artifacts.py  verify_python_wheels.py
scripts/tests/: test_release_licenses.py  test_verify_python_wheels.py
third-party-licenses/: README.md
(+205 files in other folders)
