# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "paimon-rest-server"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A FileSystemCatalog-backed Paimon REST catalog server for local end-to-end testing."
# Testing/dev tool: not published to crates.io.
publish = false

[lib]
name = "paimon_rest_server"
path = "src/lib.rs"

[[bin]]
name = "paimon-rest-server"
path = "src/main.rs"

[dependencies]
paimon = { workspace = true }
axum = { version = "0.7", features = ["macros", "tokio", "http1", "http2"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
async-trait = "0.1.81"

[dev-dependencies]
tempfile = "3"
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = "0.3"
